# routes/drivers.js
@@ -31,6 +31,12 @@ const router = express.Router();
 const driversController = require('../controllers/drivers');
 const { driversValidation } = require('../validations/driversValidation');
 
+const { isAuthenticated} = require('../middleware/authenticate')
+
+
+router.get('/', driversController.getAll);
+
+
 
 
 
@@ -39,6 +45,10 @@ router.get('/:id', driversController.getSingle);
 router.post('/', driversValidation, driversController.createDriver);
 router.put('/:id', driversValidation, driversController.updateDriver);
 router.delete('/:id', driversController.deleteDriver);
+
+router.post('/', isAuthenticated, driversController.createDriver);
+router.put('/:id', isAuthenticated, driversController.updateDriver);
+router.delete('/:id', isAuthenticated, driversController.deleteDriver);
 
 module.exports = router;
 
