# routes/index.js
@@ -2,6 +2,18 @@
 
 
 
+
+
+
+
+
+
+
+const passport = require('passport');
+
+
+
+
 const router = require('express').Router();
 
 //router.use('/', require('./swagger'));//
@@ -18,6 +30,17 @@ res.send('Hello World')});
 router.use('/vehicles', require('./vehicles'));
 
 router.use('/drivers', require('./drivers')); // 👈 New collection route
+
+
+router.get('/login', passport.authenticate('github'), (req,res)=> {});
+
+router.get('/logout', function(req, res, next)  {
+                req.logout(function(err) {
+                                if (err) { return next(err);}
+                                res.redirect('/');
+
+                });
+});
 
 
 
